# atomix

./: .gitignore  AGENTS.md  CLAUDE.md  NOTES.md  README.md  pyproject.toml
atomix/: __init__.py
atomix/ai/: __init__.py  generator.py  prompts.py
atomix/ai/docs/: analysis.md  vasp.md  workflows.md
atomix/analysis/: __init__.py  adsorption.py  energy.py  trajectory.py
atomix/calculators/: __init__.py  cp2k.py  mlip.py  vasp.py
atomix/cli/: __init__.py  main.py
atomix/core/: __init__.py  active_learning.py  calculation.py  config.py  jobs.py  screening.py  workflow.py
atomix/sites/: __init__.py  bulk.py  surface.py
tests/: __init__.py  test_adsorption.py  test_analysis.py  test_cli.py  test_core.py  test_mlip.py  test_workflow.py
